force-app/main/default/objects/Lead/fields/ISO_Code_2__c.field-meta.xml
<CustomField>
    <fullName>ISO_Code_2__c</fullName>
    <description>The ISO code of the country of this lead.</description>
    <label>ISO Code 2</label>
    <length>2</length>
    <type>Text</type>
</CustomField>