force-app/main/default/objects/Lead/fields/ISO_Code_3__c.field-meta.xml
<CustomField>
    <fullName>ISO_Code_3__c</fullName>
    <description>The three-letter country ISO code.</description>
    <label>ISO Code 3</label>
    <length>3</length>
    <type>Text</type>
</CustomField>